fix: language select layout shift (closes #855) (#867)
* fix: language select layout shift (closes #855)

* fix: remove global scroll padding

--- a/www/src/styles/global.css
+++ b/www/src/styles/global.css
@@ -37,7 +37,6 @@
   }
 
   html {
-    scroll-padding-top: 7rem;
     scroll-behavior: smooth;
     @apply scrollbar-thin scrollbar-track-transparent scrollbar-thumb-t3-purple-300 dark:scrollbar-track-transparent dark:scrollbar-thumb-t3-purple-300;
   }
